--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-28  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+        (move_file_prepare):
+	Actually handle the move-file-over-directory case.
+
 2008-03-26  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-monitor.c:
