--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-28  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2008-03-28  A. Walton  <awalton@svn.gnome.org>
 
 	* libnautilus-private/nautilus-progress-info.c:
