--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2008-03-28  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Bump version to 2.23.1
+	Gnome 2.22 work continues on gnome-2-22 branch
+
+2008-03-28  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Post release version bump
 
 === nautilus 2.22.1 ===
