Show network servers in Places sidebar. Patch by Vincent Untz. (#350974).
2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-places-sidebar.c: (update_places):
	Show network servers in Places sidebar. Patch by Vincent Untz.
	(#350974).

svn path=/trunk/; revision=14000

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/nautilus-places-sidebar.c: (update_places):
+	Show network servers in Places sidebar. Patch by Vincent Untz.
+	(#350974).
+
+2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(nautilus_icon_container_invert_selection):
 	* libnautilus-private/nautilus-icon-container.h:
