Use title capitalization for the File Operations dialog. (#516353).
2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/nautilus-progress-info.c:
	(get_progress_window):
	Use title capitalization for the File Operations dialog. (#516353).

svn path=/trunk/; revision=14001

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* libnautilus-private/nautilus-progress-info.c:
+	(get_progress_window):
+	Use title capitalization for the File Operations dialog. (#516353).
+
+2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/nautilus-places-sidebar.c: (update_places):
 	Show network servers in Places sidebar. Patch by Vincent Untz.
 	(#350974).
