Fix a typo in a string. (#521199).
2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-window-manage-views.c:
	(display_view_selection_failure):
	Fix a typo in a string. (#521199).

svn path=/trunk/; revision=14002

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/nautilus-window-manage-views.c:
+	(display_view_selection_failure):
+	Fix a typo in a string. (#521199).
+
+2008-03-29  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* libnautilus-private/nautilus-progress-info.c:
 	(get_progress_window):
 	Use title capitalization for the File Operations dialog. (#516353).
