--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  
+
+	* es.po: Updated Spanish translation
+
 === nautilus 2.22.1 ===
 
 2008-03-23  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
