Use icon name for window instead of pixbuf, if available (#519041).
2008-03-30  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-properties-window.c
	(get_image_for_properties_window), (update_properties_window_icon),
	(create_image_widget):
	Use icon name for window instead of pixbuf, if available (#519041).

svn path=/branches/gnome-2-22/; revision=14006

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-30  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-properties-window.c
+	(get_image_for_properties_window), (update_properties_window_icon),
+	(create_image_widget):
+	Use icon name for window instead of pixbuf, if available (#519041).
+
 2008-03-29  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-bookmarks-window.c (create_bookmarks_window),
