--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-31  Eskild Hustvedt  <eskildh@gnome.org>
+
+	* nn.po: Updated Norwegian Nynorsk translation
+
 2008-03-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  
 
 	* es.po: Updated Spanish translation
