--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-31  Eskild Hustvedt  <eskildh@gnome.org>
+
+	* nn.po: Updated Norwegian Nynorsk translation
+
 === nautilus 2.22.1 ===
 
 2008-03-23  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
