--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-03-31  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-autorun.c
+	(should_skip_native_mount_root), (should_autorun_mount):
+	Do not automount mount points inside hidden hierarchies (#524075).
+
+2008-03-31  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c
 	(lay_down_icons_vertical):
 	Reduce vertical space between icons, do not request space at the
