--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-04-01  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(nautilus_file_operations_unmount_mount), (empty_trash_job),
+	(nautilus_file_operations_empty_trash):
+	Do not ask twice if we want to empty the trash when unmounting
+	a volume. (#525269).
+
 2008-03-31  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-autorun.c
