--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-03-31  Eskild Hustvedt  <eskildh@gnome.org>
 
 	* nn.po: Updated Norwegian Nynorsk translation
