Add advice about patches adding strings to Nautilus.
	* HACKING:
	Add advice about patches adding strings to Nautilus.


svn path=/trunk/; revision=14018

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-01  A. Walton  <awalton@svn.gnome.org>
+
+	reviewed by: Cosimo Cecchi
+	* HACKING:
+	Add advice about patches adding strings to Nautilus.
+
 2008-04-01  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c: (delete_dir),
