--- a/HACKING
+++ b/HACKING
@@ -47,3 +47,8 @@ us about the status of them.
 Also, if you're planning to do large changes, please take them up for
 discussion on the list first. If you get feedback early it is much
 easier to integrate it into your work.
+
+If your patch adds non-trivial strings, please ask for a string review 
+from the i18n team before committing the changes. Strings should avoid
+contractions, and stay consistent with other strings already in Nautilus. 
+Please reuse strings within Nautilus where it makes sense to do so.
