Updated Traditional Chinese translation(Hong Kong). Updated Traditional
2008-04-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).



svn path=/trunk/; revision=14021

--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -4842,7 +4842,7 @@ msgstr "<b>圖示標題</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:23
 msgid "<b>Icon View Defaults</b>"
-msgstr "<b>預設為圖示顯示<b>"
+msgstr "<b>預設為圖示顯示</b>"
 
 #: ../src/nautilus-file-management-properties.glade.h:24
 msgid "<b>List Columns</b>"
