--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-04-02  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c
+	(nautilus_icon_container_update_scroll_region),
+	(lay_down_icons_horizontal):
+	Subtract 1 from icon rectangle's x2/y2 positions before setting scroll
+	area since the entire canvas codes requests 1 px more than it needs.
+	Wrap when the icon hits the canvas, rather than wrapping to late.
+	Fixes most of the "text besides icons" glitches.
+
 2008-04-01  Michael J. Chudobiak  <mjc@svn.gnome.org>
 
         * libnautilus-private/nautilus-file.c: (nautilus_file_get_icon):
