Fix SELinux:context attribute display issue
2008-04-03  Tomas Bzatek  <tbzatek@redhat.com>  

        * libnautilus-private/nautilus-file.c: (update_info_internal):
        Fix SELinux:context attribute display issue


svn path=/branches/gnome-2-22/; revision=14028

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-03  Tomas Bzatek  <tbzatek@redhat.com> 
+
+        * libnautilus-private/nautilus-file.c: (update_info_internal):
+        Fix SELinux:context attribute display issue
+
 2008-04-02  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
