--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-04  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2008-04-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
